node-grpc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodegrpc
  labels:
    app: nodegrpc
spec:
  selector:
    matchLabels:
      app: nodegrpc
  template:
    metadata:
      labels:
        app: nodegrpc
    spec:
      containers:
        - name: nodegrpc
          image: vijaykumarbhattacharji/simplenodegrpc
          ports:
            - containerPort: 50051
