node-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  type: ClusterIP
  selector:
    app: nodeapp
  ports:
    - port: 5000
      targetPort: 5000
