node-grpc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mygrpc
spec:
  type: ClusterIP
  selector:
    app: nodegrpc
  ports:
    - port: 50051
      targetPort: 50051
