ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  backend:
    serviceName: myapp
    servicePort: 5000
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: myapp
              servicePort: 5000
